2025-09-05  Zhengyi Fu  <i@fuzy.me>

	Fix font setting error in terminal

	* init.el <nerd-icons>: Only call `nerd-icons-set-font' when
	`(display-graphic-p)' is non nil.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	* init.el (+magit--ccdp-no-query): Use `bound-and-true-p'.

2025-09-04  Zhengyi Fu  <i@fuzy.me>

	Update gptel tools

	* site-lisp/gptel-config.el (+gptel-edit-file-async): New function.
	Replaced `+gptel-edit-file'.
	Reomoved `read_buffer' and `edit_buffer' tool.

2025-09-03  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/xiaoshuo.el: Change C-p/C-n to p/n.

2025-09-03  Zhengyi Fu  <i@fuzy.me>

	Fix tramp-cache configuration

	* init.el (tramp-persistency-file-name): Set to "tramp.eld".
	`tramp' reads the file with `insert-file-contents-literally', so
	`auto-compression-mode' is not supported.

2025-09-03  Zhengyi Fu  <i@fuzy.me>

	* init.el: Fix bootstrapping of pdf-tools.

2025-09-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (help-window-keep-selected): Set to t.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (ement-save-sessions): Set to t.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (consult-mode-histories): Fix histories for
	`eca-chat-mode'.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (+maybe-init-fontset): Demote errors to messages.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/check-hooks.el: New file.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* init.el: Wrap some `add-hook' forms in `after-load!' to prevent
	the standard-value from being overwritten.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/xiaoshuo.el (xiaoshuo-mode-map): Define keys.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	Minor improvement in gnus-diff

	* site-lisp/gnus-diff.el: Require `gnus-art'.
	(gnus-treat-highlight-diffs): Change to a user option.

2025-09-01  Zhengyi Fu  <i@fuzy.me>

	* init.el: Use `require-theme' to load modus-themes.

2025-09-01  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Instead of adding entries to